cli/src/snapshots/cmd_ups_status_not_enabled_selects_mode_and_returns_done.snap
---
source: cli/src/ups.rs
assertion_line: 890
expression: "String::from_utf8(buf).unwrap()"
---
UPS support is not enabled. Set `braid.enable = true` and
`braid.ups.enable = true` in your NixOS configuration and rebuild
to enable preflight safety and low-battery shutdown.
