cli/src/snapshots/snapshot_human_onbattery.snap
---
source: cli/src/ups.rs
expression: "format_human(\"ups\", &parsed, false)"
---
UPS: ups
Status: OB  [warn] on battery
Battery: 72%
Runtime: 19m 0s
Load: 23% (76 W estimated)
Input: 0.0 V (transfer 88-142 V)
Device: APC Back-UPS ES 550G
Battery manufactured: 2023/04/12
Last test: Done and passed
