cli/src/snapshots/snapshot_human_online.snap
---
source: cli/src/ups.rs
expression: "format_human(\"ups\", &parsed)"
---
UPS: ups
Status: OL
Battery: 100%
Runtime: 30:00
Load: 17% (56 W estimated)
Input: 120.0 V (transfer 88-142 V)
Device: APC Back-UPS ES 550G
Battery manufactured: 2023/04/12
Last test: Done and passed
