cli/src/snapshots/snapshot_json_invocation_failed.snap
---
source: cli/src/ups.rs
expression: "&payload"
---
{
  "error": "invocation_failed",
  "detail": "invocation failed: upsc: No such file or directory"
}
