cli/src/snapshots/snapshot_json_query_failed.snap
---
source: cli/src/ups.rs
expression: "&payload"
---
{
  "error": "query_failed",
  "detail": "exit 1: Error: Connection failure: Connection refused"
}
